--- a/mycasa.html
+++ b/mycasa.html
@@ -75,7 +75,7 @@
 
 
 				<label for="text-input-block">Email address</label>
-				<input class="au-text-input au-text-input--block" name="email" id="email" type="text" value="bob.furzer@gmail.com" >
+				<input class="au-text-input au-text-input--block" name="email" id="email" type="text" value="grace.grumman@bigpond.com" >
 
 				<br />
 
@@ -90,7 +90,7 @@
 
 			</form>
 
-			<a class="au-btn" href="dashboard-bob.html">Sign in</a>
+			<a class="au-btn" href="dashboard-grace.html">Sign in</a>
 
 
 
