--- a/verify.html
+++ b/verify.html
@@ -12,28 +12,8 @@
       <script type="text/javascript" src="../mycasa-src/js/jquery.js"></script>
 
 
-      <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js"></script>
-
-
       <script type="text/javascript">
          /* page specific js */
-
-
-         function openQRCamera(node) {
-  var reader = new FileReader();
-  reader.onload = function() {
-    node.value = "";
-    qrcode.callback = function(res) {
-      if(res instanceof Error) {
-        alert("No QR code found. Please make sure the QR code is within the camera's frame and try again.");
-      } else {
-        node.parentNode.previousElementSibling.value = res;
-      }
-    };
-    qrcode.decode(reader.result);
-  };
-  reader.readAsDataURL(node.files[0]);
-}
 
          $(document).ready(function() {
 
@@ -105,9 +85,11 @@
                </header>
 
 
+               <label for="file-upload" class="au-btn">
+Scan QR code
+              <input type="file" id="file-upload" accept="image/*" capture="environment" style="display:none;">
 
-               <input type=text size=16 placeholder="Tracking Code" class=qrcode-text><label class=qrcode-text-btn><input type=file accept="image/*" capture=environment onchange="openQRCamera(this);" tabindex=-1></label>
-               <input type=button value="Go" disabled>
+            </label>
 
 
 
