--- a/verify.html
+++ b/verify.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html>
-   <head>
-      <meta charset="utf-8">
-      <title>myCASA</title>
-      <meta name="viewport" content="width=device-width">
-      <meta name="viewport" content="initial-scale=1">
-      <link rel="stylesheet" href="../mycasa-src/css/furnace.min.css">
-      <link rel="stylesheet" href="../mycasa-src/css/casa.css">
-      <script type="text/javascript" src="../mycasa-src/js/furnace.min.js"></script>
-      <script type="text/javascript" src="../mycasa-src/js/jquery.min.js"></script>
-      <script type="text/javascript" src="../mycasa-src/js/jquery.js"></script>
+<head>
+   <meta charset="utf-8">
+   <title>myCASA</title>
+   <meta name="viewport" content="width=device-width">
+   <meta name="viewport" content="initial-scale=1">
+   <link rel="stylesheet" href="../mycasa-src-3.0/css/designsystem.min.css">
+   <link rel="stylesheet" href="../mycasa-src-3.0/css/casa.css">
+   <script type="text/javascript" src="../mycasa-src-3.0/js/designsystem.min.js"></script>
+   <script type="text/javascript" src="../mycasa-src-3.0/js/jquery.min.js"></script>
+   <script type="text/javascript" src="../mycasa-src-3.0/js/jquery.js"></script>
 
 
       <script type="text/javascript">
@@ -18,7 +18,13 @@
          $(document).ready(function() {
 
 
+           $("#file-upload").on('change', function() {
 
+              $("#qr").css("display","block");
+              $("#name").val("Furzer");
+              $("#arn").val("1234567");
+
+           });
 
          });
       </script>
@@ -73,27 +79,56 @@
                <nav class="au-breadcrumbs" aria-label="breadcrumb">
                   <ul class="au-link-list au-link-list--inline">
                      <li><a href="dashboard-bob.html">myCASA</a></li>
-                     <li>Organisation <abbr title="Aviation reference number">ARN</abbr> application</li>
+                     <li>Verify CASA flight crew licence</li>
                   </ul>
                </nav>
-				<div class="col-lg-6 col-xs-12">
 
 
                <header class="au-header" role="banner">
-                  <h1 class="break desktop au-header-heading">Organisation <abbr title="Aviation reference number">ARN</abbr> application</h1>
-                  <a class="au-direction-link au-direction-link--left" href="dashboard-bob.html">Back</a>
-               </header>
+                  <h1 class="break desktop au-header-heading">Verify CASA flight crew licence</h1>
+                  <a class="au-direction-link" href="javascript:history.back()">
+                  					<span class="au-direction-link__arrow au-direction-link__arrow--left" aria-hidden="true"></span>Back
+                  					</a>
+              </header>
+
+              <div class="row">
+                <div class="col-xs-12 col-md-12 col-lg-6">
+
+<br />
+                <div class="au-callout">
+                    To verify a CASA flight crew licence, you can either enter the ARN and family name of the licence holder or scan the code on the licence itself.
+                </div>
 
 
-               <label for="file-upload" class="au-btn">
-Scan QR code
-              <input type="file" id="file-upload" accept="image/*" capture="environment" style="display:none;">
+                  <h2>Scan licence code</h2>
+                  <img id="qr" src="qr.svg" style="display:none;"/>
+                  <div class="au-form-group casa-label">
+                    <label for="file-upload" class="au-btn au-btn--secondary">
+                        Scan QR code with camera
+                        <input type="file" id="file-upload" accept="image/*" capture="environment" style="display:none;">
 
-            </label>
+                      </label>
+                    </div>
+
+                    <h2>Licence holder details</h2>
+                    <div class="au-form-group casa-label">
+                               <label class="au-label" for="name">Family name</label>
+                               <input type="text" class="au-text-input au-text-input--block" id="name"/>
+                 	</div>
+
+       			        <div class="au-form-group">
+                               <label class="au-label" for="name">Aviation reference number</label>
+                               <input type="text" class="au-text-input au-text-input--block" id="arn"/>
+                 	</div>
+
+                  <br />
 
 
+                  <a href="verified-details.html" class="au-btn">Verify licence</a>
 
             </div>
+
+
 			 </div>
 		  </div>
 
