--- a/verified-details.html
+++ b/verified-details.html
@@ -67,12 +67,13 @@
               <div class="au-table__wrapper">
                 <table class="au-table au-table--striped">
                       <caption class="au-table__caption">Licence holder details</caption>
-
-                      <tbody class="au-table__body">
+                      <thead class="au-table__head">
                           <tr class="au-table__row">
-                              <td class="au-table__cell">Name</td>
-                              <td class="au-table__cell">Bob Furzer</td>
+                              <th scope="col" class="au-table__header ">Name</th>
+                              <th scope="col" class="au-table__header">Bob Furzer</th>
                           </tr>
+                      </thead>
+                      <tbody class="au-table__body">
                           <tr class="au-table__row">
                               <td class="au-table__cell">ARN and licence number</td>
                               <td class="au-table__cell">1234567</td>
